--- a/global.css
+++ b/global.css
@@ -1,4 +1,12 @@
 /* WEB 200 Repository Styles */
+body {
+    font-family: 'Oswald', Verdana, Arial, sans-serif;
+}
+
+h1 {
+    font-weight: 400;
+}
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
@@ -77,4 +85,11 @@
 
 .return-home:visited {
     color: #3C275A;
+}
+
+/* Assignment 3.2 */
+
+#card-example {
+    width: 600px;
+    margin: 3% auto 0;
 }
