--- a/global.css
+++ b/global.css
@@ -1,3 +1,14 @@
+/*
+============================================
+; Title: global.css
+; Author: Professor Krasso 
+; Date: 4 November 2021
+; Modified By: Laura Kendl
+; Description: This is the global.css for
+; all assignments.
+;===========================================
+*/
+
 /* WEB 200 Repository Styles */
 body {
     font-family: 'Oswald', Verdana, Arial, sans-serif;
