--- a/site.css
+++ b/site.css
@@ -1,3 +1,14 @@
+/*
+============================================
+; Title: site.css
+; Author: Professor Krasso 
+; Date: 4 November 2021
+; Modified By: Laura Kendl
+; Description: This is the site.css for
+; all assignments.
+;===========================================
+*/
+
 body {
     font-family: 'Oswald', Verdana, Arial, sans-serif;
 }
