--- a/week-2/Kendl-payroll.css
+++ b/week-2/Kendl-payroll.css
@@ -1,3 +1,14 @@
+/*
+============================================
+; Title: Kendl-payroll.css
+; Author: Professor Krasso 
+; Date: 29 October 2021
+; Modified By: Laura Kendl
+; Description: This is the css for
+; payroll assignment.
+;===========================================
+*/
+
 ul {
     border: dotted 1px red;
 }
