--- a/week-3/Kendl-temp-conversion.css
+++ b/week-3/Kendl-temp-conversion.css
@@ -1,3 +1,13 @@
+/*
+============================================
+; Title: Kendl- temp-conversion.css
+; Author: Professor Krasso 
+; Date: 4 November 2021
+; Modified By: Laura Kendl
+; Description: This is the css for
+; the temp conversion assignment.
+;===========================================
+*/
 #container {
     padding: 10px;
 }
