--- a/week-7/Kendl-javazon.css
+++ b/week-7/Kendl-javazon.css
@@ -1,11 +1,11 @@
 /*
 ============================================
-; Title: Kendl-in-n-out-books.css
+; Title: Kendl-javazon.css
 ; Author: Professor Krasso 
 ; Date: 19 November 2021
 ; Modified By: Laura Kendl
 ; Description: This is the css for
-; the In-N-Out-Books assignment.
+; the Javazon assignment.
 ;===========================================
 */
 #container {
